--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quorum-dev-quickstart",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "A utility that lets developers try out the new suite of Quorum tools from ConsenSys!",
   "main": "build/index.js",
   "repository": "git@github.com:ConsenSys/quorum-dev-quickstart.git",
@@ -13,9 +13,9 @@
   "bin": "./index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint './src/**'",
-    "lintAndFix": "eslint --fix './src/**'",
-    "prepare": "tsc && eslint --fix './src/**'",
+    "lint": "eslint \"./src/**\"",
+    "lintAndFix": "eslint --fix \"./src/**\"",
+    "prepare": "tsc && eslint --fix \"./src/**\"",
     "start": "node build/index.js"
   },
   "devDependencies": {
